--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "justinlinkk/justinlinkk.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile.jpg"
+  name             : "Justin Lin"
   pronouns         : "he/him" 
   bio              : "Target-Planning-Result"
   location         : "Hamilton, Ontario"
@@ -35,7 +35,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : 
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # URL
   semantic         : # URL
   pubmed           : 
   researchgate     : # URL
