--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,17 +5,11 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Projects"
+    url: /projects/
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Tech Gallery"
+    url: /tech-gallery/
         
   - title: "Blog Posts"
     url: /year-archive/
